MyProject/force-app/main/default/objects/Product_ext__x/Product_ext__x.object-meta.xml
<CustomObject>
    <description>Products</description>
    <externalDataSource>Northwind_OData</externalDataSource>
    <externalName>Products</externalName>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
</CustomObject>