MyProject/force-app/main/default/objects/Product_ext__x/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <description>ProductID</description>
    <externalDeveloperName>ProductID</externalDeveloperName>
    <label>ProductID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>