MyProject/force-app/main/default/objects/Product_ext__x/fields/QuantityPerUnit__c.field-meta.xml
<CustomField>
    <fullName>QuantityPerUnit__c</fullName>
    <description>QuantityPerUnit</description>
    <externalDeveloperName>QuantityPerUnit</externalDeveloperName>
    <label>QuantityPerUnit</label>
    <length>128</length>
    <type>Text</type>
</CustomField>