MyProject/force-app/main/default/objects/Product_ext__x/fields/UnitsInStock__c.field-meta.xml
<CustomField>
    <fullName>UnitsInStock__c</fullName>
    <description>UnitsInStock</description>
    <externalDeveloperName>UnitsInStock</externalDeveloperName>
    <label>UnitsInStock</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>